--- a/Forum.BrokerService/Forum.BrokerService.csproj
+++ b/Forum.BrokerService/Forum.BrokerService.csproj
@@ -38,20 +38,25 @@
     <Reference Include="Autofac, Version=3.4.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
       <HintPath>..\packages\Autofac.3.4.0\lib\net40\Autofac.dll</HintPath>
     </Reference>
-    <Reference Include="ECommon">
-      <HintPath>..\packages\ecommon.1.0.9\lib\net40\ECommon.dll</HintPath>
+    <Reference Include="ECommon, Version=1.2.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\ECommon.1.2.1\lib\net40\ECommon.dll</HintPath>
     </Reference>
-    <Reference Include="ECommon.Autofac, Version=1.1.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\ecommon.autofac.1.1.1\lib\net40\ECommon.Autofac.dll</HintPath>
+    <Reference Include="ECommon.Autofac, Version=1.2.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\ECommon.Autofac.1.2.1\lib\net40\ECommon.Autofac.dll</HintPath>
     </Reference>
-    <Reference Include="ECommon.JsonNet">
-      <HintPath>..\packages\ecommon.jsonnet.1.0.9\lib\net40\ECommon.JsonNet.dll</HintPath>
+    <Reference Include="ECommon.JsonNet, Version=1.2.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\ECommon.JsonNet.1.2.1\lib\net40\ECommon.JsonNet.dll</HintPath>
     </Reference>
-    <Reference Include="ECommon.Log4Net">
-      <HintPath>..\packages\ecommon.log4net.1.0.9\lib\net40\ECommon.Log4Net.dll</HintPath>
+    <Reference Include="ECommon.Log4Net, Version=1.2.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\ECommon.Log4Net.1.2.1\lib\net40\ECommon.Log4Net.dll</HintPath>
     </Reference>
-    <Reference Include="EQueue">
-      <HintPath>..\packages\equeue.1.1.0\lib\net40\EQueue.dll</HintPath>
+    <Reference Include="EQueue, Version=1.1.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\EQueue.1.1.2\lib\net40\EQueue.dll</HintPath>
     </Reference>
     <Reference Include="log4net">
       <HintPath>..\packages\log4net.2.0.3\lib\net40-full\log4net.dll</HintPath>
