--- a/Forum.Commands/Forum.Commands.csproj
+++ b/Forum.Commands/Forum.Commands.csproj
@@ -32,13 +32,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ECommon, Version=1.0.9.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="ECommon, Version=1.2.1.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ecommon.1.0.9\lib\net40\ECommon.dll</HintPath>
+      <HintPath>..\packages\ECommon.1.2.1\lib\net40\ECommon.dll</HintPath>
     </Reference>
-    <Reference Include="ENode, Version=2.1.7.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="ENode, Version=2.1.9.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\enode.2.1.7\lib\net40\ENode.dll</HintPath>
+      <HintPath>..\packages\ENode.2.1.9\lib\net40\ENode.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
