--- a/Forum.EventService/packages.config
+++ b/Forum.EventService/packages.config
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="3.4.0" targetFramework="net451" />
-  <package id="ecommon" version="1.0.9" targetFramework="net451" />
-  <package id="ecommon.autofac" version="1.1.1" targetFramework="net451" />
-  <package id="ecommon.jsonnet" version="1.0.9" targetFramework="net451" />
-  <package id="ecommon.log4net" version="1.0.9" targetFramework="net451" />
-  <package id="enode" version="2.1.7" targetFramework="net451" />
-  <package id="enode.equeue" version="1.2.0" targetFramework="net451" />
-  <package id="equeue" version="1.1.0" targetFramework="net451" />
+  <package id="ECommon" version="1.2.1" targetFramework="net451" />
+  <package id="ECommon.Autofac" version="1.2.1" targetFramework="net451" />
+  <package id="ECommon.JsonNet" version="1.2.1" targetFramework="net451" />
+  <package id="ECommon.Log4Net" version="1.2.1" targetFramework="net451" />
+  <package id="ENode" version="2.1.9" targetFramework="net451" />
+  <package id="ENode.EQueue" version="1.2.2" targetFramework="net451" />
+  <package id="EQueue" version="1.1.2" targetFramework="net451" />
   <package id="log4net" version="2.0.3" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net451" />
 </packages>
