--- a/Forum.EventSynchronizers/packages.config
+++ b/Forum.EventSynchronizers/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ecommon" version="1.0.9" targetFramework="net40" />
-  <package id="enode" version="2.1.7" targetFramework="net40" />
+  <package id="ECommon" version="1.2.1" targetFramework="net40" />
+  <package id="ENode" version="2.1.9" targetFramework="net40" />
 </packages>
