--- a/Forum.Web/packages.config
+++ b/Forum.Web/packages.config
@@ -5,13 +5,13 @@
   <package id="Autofac.Mvc5" version="3.3.0" targetFramework="net451" />
   <package id="Autofac.WebApi2" version="3.3.0" targetFramework="net451" />
   <package id="bootstrap" version="3.0.0" targetFramework="net451" />
-  <package id="ecommon" version="1.0.9" targetFramework="net451" />
-  <package id="ecommon.autofac" version="1.1.1" targetFramework="net451" />
-  <package id="ecommon.jsonnet" version="1.0.9" targetFramework="net451" />
-  <package id="ecommon.log4net" version="1.0.9" targetFramework="net451" />
-  <package id="enode" version="2.1.7" targetFramework="net451" />
-  <package id="enode.equeue" version="1.2.0" targetFramework="net451" />
-  <package id="equeue" version="1.1.0" targetFramework="net451" />
+  <package id="ECommon" version="1.2.1" targetFramework="net451" />
+  <package id="ECommon.Autofac" version="1.2.1" targetFramework="net451" />
+  <package id="ECommon.JsonNet" version="1.2.1" targetFramework="net451" />
+  <package id="ECommon.Log4Net" version="1.2.1" targetFramework="net451" />
+  <package id="ENode" version="2.1.9" targetFramework="net451" />
+  <package id="ENode.EQueue" version="1.2.2" targetFramework="net451" />
+  <package id="EQueue" version="1.1.2" targetFramework="net451" />
   <package id="jQuery" version="1.10.2" targetFramework="net451" />
   <package id="log4net" version="2.0.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.1.2" targetFramework="net451" />
