--- a/Forum.Web/Forum.Web.csproj
+++ b/Forum.Web/Forum.Web.csproj
@@ -187,10 +187,12 @@
     <Content Include="Content\bootstrap\fonts\glyphicons-halflings-regular.woff" />
     <Content Include="Content\bootstrap\css\bootstrap-theme.css.map" />
     <Content Include="Content\bootstrap\css\bootstrap.css.map" />
+    <Content Include="Content\angularjs\angular.min.js.map" />
     <None Include="Content\jquery\jquery-1.10.2.intellisense.js" />
     <Content Include="Content\bootstrap\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Content\bootstrap\js\bootstrap.js" />
     <Content Include="Content\bootstrap\js\bootstrap.min.js" />
+    <Content Include="Content\controllers\post-controller.js" />
     <Content Include="Content\images\logo.png" />
     <Content Include="Content\jquery\jquery-1.10.2.min.js" />
     <Content Include="favicon.ico" />
