--- a/Forum.EventService/Forum.EventService.csproj
+++ b/Forum.EventService/Forum.EventService.csproj
@@ -117,6 +117,10 @@
       <Project>{433dd072-0748-4440-ba1b-4a0d6e507d3b}</Project>
       <Name>Forum.Denormalizers.Dapper</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Forum.Domain.Repositories.Dapper\Forum.Domain.Repositories.Dapper.csproj">
+      <Project>{b229fffe-0f61-4ec7-88a5-5e76197f476c}</Project>
+      <Name>Forum.Domain.Repositories.Dapper</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Forum.Domain\Forum.Domain.csproj">
       <Project>{5a4055c3-89bc-4149-8a6d-06ce985080c9}</Project>
       <Name>Forum.Domain</Name>
