--- a/Forum.Web/Forum.Web.csproj
+++ b/Forum.Web/Forum.Web.csproj
@@ -78,13 +78,13 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\ENode.2.5.5\lib\net45\ENode.dll</HintPath>
     </Reference>
-    <Reference Include="ENode.EQueue, Version=1.5.9.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="ENode.EQueue, Version=1.6.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ENode.EQueue.1.5.9\lib\net45\ENode.EQueue.dll</HintPath>
+      <HintPath>..\packages\enode.equeue.1.6.0\lib\net45\ENode.EQueue.dll</HintPath>
     </Reference>
-    <Reference Include="EQueue, Version=1.3.7.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="EQueue, Version=1.3.8.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\EQueue.1.3.7\lib\net45\EQueue.dll</HintPath>
+      <HintPath>..\packages\EQueue.1.3.8\lib\net45\EQueue.dll</HintPath>
     </Reference>
     <Reference Include="log4net">
       <HintPath>..\packages\log4net.2.0.3\lib\net40-full\log4net.dll</HintPath>
