--- a/Forum.CommandService/log4net.config
+++ b/Forum.CommandService/log4net.config
@@ -8,7 +8,7 @@
         <param name="File" value="logs/default.log"/>
         <param name="AppendToFile" value="true"/>
         <param name="RollingStyle" value="Date"/>
-        <param name="DatePattern" value="yyyy-MM-dd"/>
+        <param name="DatePattern" value=".yyyy-MM-dd"/>
         <param name="StaticLogFileName" value="true"/>
         <param name="CountDirection" value="1"/>
         <layout type="log4net.Layout.PatternLayout,log4net">
@@ -19,7 +19,7 @@
         <param name="File" value="logs/ecommon.log"/>
         <param name="AppendToFile" value="true"/>
         <param name="RollingStyle" value="Date"/>
-        <param name="DatePattern" value="yyyy-MM-dd"/>
+        <param name="DatePattern" value=".yyyy-MM-dd"/>
         <param name="StaticLogFileName" value="true"/>
         <param name="CountDirection" value="1"/>
         <layout type="log4net.Layout.PatternLayout,log4net">
@@ -30,7 +30,7 @@
         <param name="File" value="logs/equeue.log"/>
         <param name="AppendToFile" value="true"/>
         <param name="RollingStyle" value="Date"/>
-        <param name="DatePattern" value="yyyy-MM-dd"/>
+        <param name="DatePattern" value=".yyyy-MM-dd"/>
         <param name="StaticLogFileName" value="true"/>
         <param name="CountDirection" value="1"/>
         <layout type="log4net.Layout.PatternLayout,log4net">
@@ -41,7 +41,7 @@
         <param name="File" value="logs/enode.log"/>
         <param name="AppendToFile" value="true"/>
         <param name="RollingStyle" value="Date"/>
-        <param name="DatePattern" value="yyyy-MM-dd"/>
+        <param name="DatePattern" value=".yyyy-MM-dd"/>
         <param name="StaticLogFileName" value="true"/>
         <param name="CountDirection" value="1"/>
         <layout type="log4net.Layout.PatternLayout,log4net">
